2005-11-09  Jerry DeLisle <jvdelisle@gcc.gnu.org>

PR libgfortran/24699, 24700, 24719, 24785
	* io/transfer.c (read_sf): Remove incorrect statement that was
	clearing bytes_left.
	(formatted_transfer_scalar): Add handling of end-of-record
	condition, setting values correctly to backup.  Handle x format
	when doing non-advancing write.
	(st_read): Initialize current_record.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@106797 138bc75d-0d04-0410-961f-82ee72b054a4